Cambios realizados: muchos.  PD. No te vuelvas loca veronica

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,4 +2,5 @@ db.host=localhost
 db.port=3306
 db.name=aerolinea
 db.user=root
-db.password=mario2005
+db.password=Bobito18
+db.sqlscript=sql/aerolinea-app.sql
