Final final de los finales

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,5 +2,5 @@ db.host=localhost
 db.port=3306
 db.name=aerolinea
 db.user=root
-db.password=root
+db.password=Bobito18
 db.sqlscript=sql/aerolinea-app.sql
